keck-escape-room/src/components/App.css
@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");

body {
  margin: 0;
}

.App {
  display: grid;
  grid-template-rows: auto auto auto;
  grid-template-columns: auto auto auto;
  margin: 0;
  height: 100vh;
  width: 100vw;
  background-color: black;
  background-image: radial-gradient(rgba(0, 120, 0, 1), black 80%);
  padding-top: 20px;
  font-size: large;
  color: white;
  font-family: "Press Start 2P";
}

/* Load side bar */
#game-loader {
  grid-row: 1 / span 3;
  /* background-color: blue; */
}

/* Game content */
#game-container {
  background-color: blueviolet;
}

/* Map placement */
#map-container {
  display: flex;
  flex-direction: column;
  grid-row: 2 / span 2;
  grid-column: 2 / 2;
  justify-self: center;
}

/* Nav Bar */
#nav-bar-container {
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-family: "Courier New", Courier, monospace;
  grid-row: 1 / span 1;
  grid-column: 2 / 2;
  margin: 0 4.5vw 0 4.5vw;
  font: inherit;
}

button {
  font-size: small;
  font-family: inherit;
  transition: 0.8s ease;
  border-radius: 4px;
  background-image: url("../images/codeGif.gif");
}

#sign-out-button {
  margin: 1vh 0 0 0vw;
  padding: 0;
  height: 5vh;
  width: 10vw;
}

Button {
  height: 8vh;
  width: 10vw;
  margin-left: 4vw;
  font-size: 1.6vh;
}

button:hover {
  color: white;
  transition: 1s ease-out;
}

/*Sign Out */
#signOutContainer {
  grid-row: 1 / span 1;
  grid-column: 3 / 3;
  margin: 0 0 0 10vw;
  font-size: small;
  padding-right: 0vw;
  width: 29vw;
}

#joke-container {
  font-size: 1.5vw;
  width: 35vw;
}

a {
  color: teal;
  text-align: center;
}

#signInContainer {
  text-align: center;
  display: flex;
  flex-direction: column;
  grid-row: 1 / span 2;
  grid-column: 2 / 2;
  justify-self: center;
}

#logInButton {
  height: 30vh;
  margin: auto;
}

